<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.trackinfo.TrackInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/album_image_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/album_cover"
                android:scaleType="centerInside"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/track_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@tools:sample/cities" />

            <ImageView
                android:id="@+id/explicit_text_view"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginHorizontal="4dp"
                android:contentDescription="@string/explicit"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_explicit_24"
                app:tint="@color/spotify_gray_light" />

            <TextView
                android:id="@+id/duration_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3:32" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/artists"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artists_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/layout_artist" />

        <ProgressBar
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>