<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.albumscreen.AlbumScreenFragment">

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <include
        android:id="@+id/network_error_layout"
        layout="@layout/network_error_layout"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ready_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/album_image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginVertical="16dp"
                android:contentDescription="@string/album_cover"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/album_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/album_year_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:textAlignment="center"
                android:textColor="@color/spotify_gray_light"
                tools:text="2004" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/artists"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artists_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/layout_artist" />

            <ProgressBar
                android:id="@+id/artists_progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:visibility="visible" />

            <include
                android:id="@+id/artists_error"
                layout="@layout/network_error_layout"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/tracks"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/schedule_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/schedule_for_later_listening"
                    android:src="@drawable/ic_baseline_schedule_24"
                    app:tint="@color/spotify_green" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <ImageView
                    android:id="@+id/add_to_library_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/add_to_library"
                    android:src="@drawable/ic_baseline_bookmark_border_24"
                    app:tint="@color/spotify_green" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/tracks_progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:visibility="visible" />

            <include
                android:id="@+id/tracks_error_layout"
                layout="@layout/network_error_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracks_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_track" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>